--- a/index.html
+++ b/index.html
@@ -1906,8 +1906,8 @@
         <h1>Hydrogen and Helium Gas</h1>
         <h2>Mix of Ice, Rock and Metallic Fluids</h2>
     </div>
-    <div class="photo_feeds_4" style="background: black">
-        <img src="./img/41.png" style="height: 80vh;">
+    <div class="photo_feeds_4">
+        <img src="./img/41.png">
     </div>
     <div class="photo_feeds_5">
         <img src="./img/51.png">
